--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "node ./bin/server.js"
+    "start": "node ./bin/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.5.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "file-system": "^2.2.2",
     "guid": "0.0.12",
     "http": "0.0.0",
-    "jsonwebtoken": "^7.4.0",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "mongoose": "^5.9.2",
     "sendgrid": "^2.0.0"
